--- a/ios/IssueTracker/IssueTracker/IssueList/View/IssueCell.xib
+++ b/ios/IssueTracker/IssueTracker/IssueList/View/IssueCell.xib
@@ -13,7 +13,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="IssueCell" customModule="IssueTracker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="390" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -27,7 +27,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이슈에 대한 설명(최대 두 줄까지 보여줄 수 있다)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WN5-Kw-WYQ">
-                        <rect key="frame" x="15" y="50" width="360" height="20"/>
+                        <rect key="frame" x="17" y="50" width="358" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="PSk-NO-1GR"/>
                         </constraints>
@@ -36,7 +36,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r8k-B7-nLH" userLabel="milestoneView">
-                        <rect key="frame" x="15" y="75" width="360" height="30"/>
+                        <rect key="frame" x="16" y="75" width="359" height="30"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="signpost.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="OLm-oa-SJA">
                                 <rect key="frame" x="0.0" y="5" width="21" height="19.5"/>
@@ -67,20 +67,30 @@
                             <constraint firstAttribute="height" constant="30" id="t5M-j2-7HY"/>
                         </constraints>
                     </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="67T-wX-Tmx" userLabel="LineView">
+                        <rect key="frame" x="15" y="154" width="360" height="1"/>
+                        <color key="backgroundColor" systemColor="placeholderTextColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="7e5-84-6SO"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="b1u-BX-WeN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="As6-ep-1n9"/>
-                    <constraint firstAttribute="bottom" secondItem="4sH-Hc-qno" secondAttribute="bottom" constant="10" id="DTK-mh-gVk"/>
+                    <constraint firstItem="67T-wX-Tmx" firstAttribute="bottom" secondItem="4sH-Hc-qno" secondAttribute="bottom" constant="15" id="DTK-mh-gVk"/>
+                    <constraint firstItem="67T-wX-Tmx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="EY1-QI-Ixt"/>
+                    <constraint firstAttribute="trailing" secondItem="67T-wX-Tmx" secondAttribute="trailing" constant="15" id="I4G-Wt-C34"/>
                     <constraint firstItem="4sH-Hc-qno" firstAttribute="top" secondItem="r8k-B7-nLH" secondAttribute="bottom" constant="5" id="ILn-aN-W9F"/>
                     <constraint firstAttribute="trailing" secondItem="r8k-B7-nLH" secondAttribute="trailing" constant="15" id="JMi-CJ-p5o"/>
                     <constraint firstItem="b1u-BX-WeN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="QFD-oL-4tH"/>
                     <constraint firstItem="r8k-B7-nLH" firstAttribute="top" secondItem="WN5-Kw-WYQ" secondAttribute="bottom" constant="5" id="aik-Se-udd"/>
-                    <constraint firstItem="WN5-Kw-WYQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="e7F-6f-E2B"/>
+                    <constraint firstItem="WN5-Kw-WYQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="17" id="e7F-6f-E2B"/>
                     <constraint firstAttribute="trailing" secondItem="WN5-Kw-WYQ" secondAttribute="trailing" constant="15" id="gTx-1b-hQd"/>
                     <constraint firstAttribute="trailing" secondItem="b1u-BX-WeN" secondAttribute="trailing" constant="15" id="njo-VJ-gyB"/>
-                    <constraint firstItem="r8k-B7-nLH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="phd-4e-WRw"/>
+                    <constraint firstItem="r8k-B7-nLH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="phd-4e-WRw"/>
                     <constraint firstItem="WN5-Kw-WYQ" firstAttribute="top" secondItem="b1u-BX-WeN" secondAttribute="bottom" constant="10" id="qoh-rf-LIQ"/>
                     <constraint firstItem="4sH-Hc-qno" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="tCA-Yk-Gdl"/>
+                    <constraint firstAttribute="bottom" secondItem="67T-wX-Tmx" secondAttribute="bottom" constant="-0.5" id="x3p-4z-vcg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -96,6 +106,9 @@
     </objects>
     <resources>
         <image name="signpost.right" catalog="system" width="128" height="118"/>
+        <systemColor name="placeholderTextColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
