--- a/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
+++ b/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ztH-lY-X3Y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ztH-lY-X3Y">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -98,23 +98,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vTy-kJ-ZF8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2467" y="793"/>
+            <point key="canvasLocation" x="3072" y="793"/>
         </scene>
-        <!--마일스톤-->
+        <!--Milestone View Controller-->
         <scene sceneID="f18-5Z-nm8">
             <objects>
-                <viewController id="N0n-U4-iYv" sceneMemberID="viewController">
+                <viewController id="N0n-U4-iYv" customClass="MilestoneViewController" customModule="issue_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="inv-4x-HVd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="fJQ-AJ-JNc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="마일스톤" image="vector" id="xZ6-Ps-dXT"/>
+                    <navigationItem key="navigationItem" id="3Y7-ST-mEk"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1rW-Zv-Ixr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1739" y="793"/>
+            <point key="canvasLocation" x="2417" y="793"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="pYl-ZN-vsk">
@@ -129,13 +129,32 @@
                     <connections>
                         <segue destination="oTI-da-eDR" kind="relationship" relationship="viewControllers" id="Fb5-vw-YJJ"/>
                         <segue destination="dsf-nF-ec5" kind="relationship" relationship="viewControllers" id="U3N-hc-L3l"/>
-                        <segue destination="N0n-U4-iYv" kind="relationship" relationship="viewControllers" id="DK5-w3-R3k"/>
+                        <segue destination="g0q-18-mPP" kind="relationship" relationship="viewControllers" id="DK5-w3-R3k"/>
                         <segue destination="cxD-Kl-bEy" kind="relationship" relationship="viewControllers" id="HpJ-9s-VRl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pyw-Dd-A8x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1394" y="29"/>
+        </scene>
+        <!--마일스톤-->
+        <scene sceneID="3qO-v6-GGL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="g0q-18-mPP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="마일스톤" image="vector" id="xZ6-Ps-dXT"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fmO-hW-aBA">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="N0n-U4-iYv" kind="relationship" relationship="rootViewController" id="hL9-tQ-R4J"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f25-i6-ILh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1737.68115942029" y="792.85714285714278"/>
         </scene>
     </scenes>
     <resources>
